// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PositioningPopup /> check props renders correctly with arrow 1`] = `
<PositioningPopup
  withArrow={true}
>
  <div
    className="popup-wrap hidden"
    style={
      Object {
        "left": 20,
        "top": "100%",
      }
    }
  >
    <PopupArrow>
      <span
        className="base white top shadow-top"
        style={Object {}}
      />
    </PopupArrow>
    <Popup>
      <div
        className="popup"
      />
    </Popup>
  </div>
</PositioningPopup>
`;

exports[`<PositioningPopup /> check props renders correctly without props 1`] = `
<PositioningPopup>
  <div
    className="popup-wrap hidden"
    style={
      Object {
        "left": 20,
        "top": "100%",
      }
    }
  >
    <Popup>
      <div
        className="popup"
      />
    </Popup>
  </div>
</PositioningPopup>
`;
